Java11とtesting-jetty9で動くように設定やコンパイルエラーに対応。テストはEL関連の実行時エライで動かない。