@@ -20,24 +20,8 @@
   </parent>
 
   <properties>
-    <ecj.version>3.5.1</ecj.version>
+    <ecj.version>4.6.1</ecj.version>
   </properties>
-
-  <profiles>
-    <profile>
-      <id>java8</id>
-      <properties>
-        <ecj.version>4.6.1</ecj.version>
-      </properties>
-    </profile>
-    <profile>
-      <id>java9</id>
-      <properties>
-        <ecj.version>4.6.1</ecj.version>
-        <junit.additionalArgLine>--add-modules java.activation,java.xml.bind</junit.additionalArgLine>
-      </properties>
-    </profile>
-  </profiles>
 
   <dependencies>
 
@@ -69,13 +53,6 @@
     <dependency>
       <groupId>com.nablarch.framework</groupId>
       <artifactId>nablarch-core-validation-ee</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
       <scope>provided</scope>
     </dependency>
 
@@ -125,7 +102,70 @@
 
     <dependency>
       <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-testing-jetty6</artifactId>
+      <artifactId>nablarch-testing-jetty9</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>javax.activation</artifactId>
+      <version>1.2.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>2.3.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet.jsp.jstl</groupId>
+      <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+      <version>1.2.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-webapp</artifactId>
+      <version>9.4.19.v20190610</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlet</artifactId>
+      <version>9.4.19.v20190610</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>apache-jsp</artifactId>
+      <version>9.4.19.v20190610</version>
       <scope>test</scope>
     </dependency>
 
@@ -146,7 +186,7 @@
         <directory>src/test/java</directory>
       </testResource>
       <testResource>
-        <directory>${project.basedir}/src/test/env/jetty6/resources</directory>
+        <directory>${project.basedir}/src/test/env/jetty9/resources</directory>
       </testResource>
     </testResources>
   </build>
